# github-mcp-assistant

./: .gitignore  README.md  claude_desktop_config.example.json  env.example  github_server.py  mcp_server_config.example.json  pre-commit-check.py  pyproject.toml  requirements.txt  setup.py  test_setup.py
